# rust-dependabot-generator

./: .releaserc.yaml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
src/: main.rs
