[package]
name = "dependabot-generator"
description = "Scans directories and generates a dependabot config based on found package manager files."
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/andreimoustache/rust-dependabot-generator"
homepage = "https://github.com/andreimoustache/rust-dependabot-generator"
readme = "README.md"
exclude = [
  ".github",
  ".vscode"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
walkdir = { version = "2.3" }
dependabot-config = "0.3"
env_logger = "0.11"
log = "0.4"
clap-verbosity-flag = "1.0"