[package]
name = "dependabot-generator"
description = "Scans directories and generates a dependabot config based on found package manager files."
version = "1.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/andreimoustache/rust-dependabot-generator"
homepage = "https://github.com/andreimoustache/rust-dependabot-generator"
readme = "README.md"
exclude = [
  ".github",
  ".vscode"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
walkdir = { version = "2.3" }
dependabot-config = { git = "https://github.com/taiki-e/dependabot-config.git", rev = "310a1393" }
env_logger = "0.11"
globset = "0.4.16"
itertools = "0.14.0"
log = "0.4"
clap-verbosity-flag = "3.0.3"
tempfile = "3.20.0"

[dev-dependencies]
indoc = "2.0.6"
